bug 1142384 - eventtokenbucket thread management r=hurley